--- a/vercel.json
+++ b/vercel.json
@@ -25,5 +25,7 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "installCommand": "npm install && cd frontend && npm install",
+  "buildCommand": "cd frontend && npm run build"
 }
