Fix_critical_routing_issues_add_missing_current-simple_API_and_fix_vercel_static_build_paths

--- a/vercel.json
+++ b/vercel.json
@@ -19,10 +19,15 @@
       "dest": "/api/$1"
     },
     {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json|txt|woff|woff2))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
   ],
   "installCommand": "cd frontend && npm install",
-  "buildCommand": "cd frontend && npm run build"
+  "buildCommand": "cd frontend && npm run build",
+  "outputDirectory": "frontend/build"
 }
