--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-onestore",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "directories": {
     "doc": "docs"
   },
