--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "installCommand": "npm install && cd frontend && npm install",
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs18.x",
+      "runtime": "@vercel/node@3.0.0",
       "memory": 1024,
       "maxDuration": 30
     }
