--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -9,17 +9,17 @@
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.svg",
+      "src": "favicon.ico",
       "type": "image/svg+xml",
       "sizes": "any"
     },
     {
-      "src": "logo192.svg",
+      "src": "logo192.png",
       "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.svg",
+      "src": "logo512.png",
       "type": "image/svg+xml", 
       "sizes": "512x512"
     }
